--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,4 +8,5 @@ edition = "2021"
 [dependencies]
 anyhow = "1.0.82"
 basic-toml = "0.1.9"
+reqwest = { version = "0.12.5", features = ["blocking", "json"] }
 serde = { version = "1.0.197", features = ["derive"] }
