--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "yt-dlp-dec"
+name = "yt-dlp-tasker"
 version = "0.1.0"
 edition = "2021"
 
@@ -8,5 +8,5 @@ edition = "2021"
 [dependencies]
 anyhow = "1.0.82"
 basic-toml = "0.1.9"
-reqwest = { version = "0.12.5", features = ["blocking", "json"] }
+reqwest = { version = "0.12.5", features = ["blocking"] }
 serde = { version = "1.0.197", features = ["derive"] }
