--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,3 +10,6 @@ anyhow = "1.0.82"
 basic-toml = "0.1.9"
 reqwest = { version = "0.12.5", features = ["blocking"] }
 serde = { version = "1.0.197", features = ["derive"] }
+
+[features]
+rustls-tls = ["reqwest/rustls-tls"]
